Agregando estilos a las cards

--- a/root/index.html
+++ b/root/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/f2f0492e67.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <title>Petshop</title>
 </head>
 <body>
@@ -46,7 +46,9 @@
             <h1>Productos destacados</h1>
             <ul id="menu-productos-destacados">
                 <li>Comederos</li>
+                <li><i class="fa-solid fa-circle"></i></li>
                 <li>Accesorios</li>
+                <li><i class="fa-solid fa-circle"></i></i></li>
                 <li>Comida</li>
             </ul>
         </section>
