Agregando estilos a la ubicación

--- a/root/index.html
+++ b/root/index.html
@@ -76,24 +76,48 @@
                 <input type="text" value="Ingresa tu correo electrónico">
                 <input type="text" value="Teléfono">
                 <div id="form-contactanos-btn-contenedor">
-                    <button type="submit" id="buttom-resetear">Resetear</button>
-                    <button type="submit" id="buttom-enviar">Enviar</button>
+                    <button type="submit" id="btn-resetear">Resetear</button>
+                    <button type="submit" id="btn-enviar">Enviar</button>
                 </div>
             </form>
         </section>
         <section class="suscribirme">
-            <p><i class="fa-solid fa-envelopes-bulk"></i>Suscríbete para más novedades</p>
+            <p><i class="fa-solid fa-envelopes-bulk"></i> Suscríbete para más novedades</p>
             <form>
                 <input type="text" id="suscribirme" value="Ingresá tu correo electronico">
-                <button id="buttom-suscribirme">Suscribirme</button>
+                <button id="btn-suscribirme">Suscribirme</button>
             </form>
         </section>
         <section class="ubicacion">
-            <ul>
-                <li><i class="fa-solid fa-location-dot"></i> Localidad</li>
-                <li><i class="fa-solid fa-phone"></i> Teléfono</li>
-                <li><i class="fa-solid fa-envelope-circle-check"></i> Correo Electrónico</li>
-            </ul>
+            <table>
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-location-dot"></i>
+                    </td>
+                    <td>
+                        <h3>Localidad</h3>
+                        <p>Calle - provincia</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-phone"></i>
+                    </td>
+                    <td>
+                        <h3>Teléfono</h3>
+                        <p>Número de teléfono</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <i class="fa-solid fa-envelope-circle-check"></i>
+                    </td>
+                    <td>
+                        <h3>Correo Electrónico</h3>
+                        <p>Dirección de correo</p>
+                    </td>
+                </tr>
+            </table>
             <div>
                 <img src="./img/Logologo-claro.png" alt="logotipo">
             </div>
