--- a/root/index.html
+++ b/root/index.html
@@ -15,13 +15,20 @@
     <header>
         <nav id="nav-menu-superior">
             <h3>Grandes ofertas en comederos</h3>
-            <ul>
-                <li>Español <i class="fa-solid fa-angle-down"></i></li>
-                <li>ARG$ <i class="fa-solid fa-angle-down"></i></li>
-            </ul>
+            <div>
+                <select name="idioma">
+                    <option value="idioma1" selected>Español</option>
+                    <option value="idioma2">Inglés</option>
+                </select>
+                <select name="moneda">
+                    <option value="moneda1" selected>ARG$</option>
+                    <option value="moneda2">COL$</option>
+                    <option value="moneda3">DÓLAR$</option>
+                </select>
+            </div>
         </nav>
         <nav id="nav-menu-inferior">
-            <div>
+            <div class="logotipo">
                 <img src="./img/Logotipo.png" alt="logotipo">
             </div>
             <ul>
@@ -84,15 +91,17 @@
         <section class="suscribirme">
             <p><i class="fa-solid fa-envelopes-bulk"></i> Suscríbete para más novedades</p>
             <form>
-                <input type="text" id="suscribirme" value="Ingresá tu correo electronico">
+                <input type="text" id="suscribirme" value="Ingrese su correo electrónico">
                 <button id="btn-suscribirme">Suscribirme</button>
             </form>
         </section>
+    </main>
+    <footer>
         <section class="ubicacion">
             <table>
                 <tr>
                     <td>
-                        <i class="fa-solid fa-location-dot"></i>
+                        <img src="./img/Iconoubicacion.png" alt="ubicación">
                     </td>
                     <td>
                         <h3>Localidad</h3>
@@ -101,7 +110,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <i class="fa-solid fa-phone"></i>
+                        <img src="./img/Iconotelefono.png" alt="teléfono">
                     </td>
                     <td>
                         <h3>Teléfono</h3>
@@ -110,7 +119,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <i class="fa-solid fa-envelope-circle-check"></i>
+                        <img src="./img/Iconocorreo.png" alt="correo electrónico">
                     </td>
                     <td>
                         <h3>Correo Electrónico</h3>
@@ -118,17 +127,17 @@
                     </td>
                 </tr>
             </table>
-            <div>
+            <div class="logotipo">
                 <img src="./img/Logologo-claro.png" alt="logotipo">
             </div>
         </section>
-    </main>
-    <footer>
-        <h4>Todos los derechos reservados Front End</h4>
-        <ul>
-            <li><a href="https://www.instagram.com/adrianaps75/" target="_blank"><i class="fa-brands fa-instagram"></i> </a></li>
-            <li><a href="https://www.linkedin.com/in/adriana-paredes-salinas-556279104/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></i></li>
-        </ul>
+        <section class="redes">
+            <h4>Todos los derechos reservados Front End</h4>
+            <ul>
+                <li><a href="https://www.instagram.com/adrianaps75/" target="_blank"><i class="fa-brands fa-instagram"></i> </a></li>
+                <li><a href="https://www.linkedin.com/in/adriana-paredes-salinas-556279104/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></i></li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
